--- a/src/styles/globalheader.scss
+++ b/src/styles/globalheader.scss
@@ -77,17 +77,17 @@ header {
       padding: 0.40rem 0.25rem 0.25rem 0.15rem;
       text-align: center;
       cursor: pointer;
-      button {
-      background-color: transparent;
-      box-shadow: none;
-      border-color: transparent;
-    }
-    > button:focus, > button:hover, > button:active {
+      > button {
         background-color: transparent;
         box-shadow: none;
         border-color: transparent;
-        padding: 0.40rem 0.10rem 0.25rem 0.15rem;
-  }
+        padding: 0 0.65rem;
+      }
+      > button:focus, > button:hover, > button:active {
+        background-color: transparent;
+        box-shadow: none;
+        border-color: transparent;
+      }
     }
   }
   .c_dropdown {
