Added Z-index to make logout work in Safari browser (#139)
* Add Z-index to make logout work in safari

* 0.1.76

--- a/src/styles/globalheader.scss
+++ b/src/styles/globalheader.scss
@@ -112,6 +112,7 @@ header {
       cursor: pointer;
       text-outline: none;
       outline: none;
+      z-index: 5;
     }
     :hover, :focus {
       background-color: #d8ecf0
