--- a/src/styles/datepicker.scss
+++ b/src/styles/datepicker.scss
@@ -6,12 +6,12 @@
 
 @font-face {
   font-family: 'RwWidgets';
-  src: url('#{$fa-font-path}/../rw/fonts/rw-widgets.eot');
-  src: url('#{$fa-font-path}/../rw/fonts/rw-widgets.eot')
+  src: url('#{$fa-font-path}/rw-widgets.eot');
+  src: url('#{$fa-font-path}/rw-widgets.eot')
       format('embedded-opentype'),
-    url('#{$fa-font-path}/../rw/fonts/rw-widgets.woff') format('woff'),
-    url('#{$fa-font-path}/../rw/fonts/rw-widgets.ttf') format('truetype'),
-    url('#{$fa-font-path}/../rw/fonts/rw-widgets.svg') format('svg');
+    url('#{$fa-font-path}/rw-widgets.woff') format('woff'),
+    url('#{$fa-font-path}/rw-widgets.ttf') format('truetype'),
+    url('#{$fa-font-path}/rw-widgets.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
